# fast_xml_rust

./: flake.nix  rebar.config
native/fxml_stream_rust/: Cargo.toml
native/fxml_stream_rust/src/: lib.rs  stream.rs  terms.rs
src/: fast_xml_rust.app.src  fxml_stream_rust.erl
test/: fxml_stream_rust_test.erl
